# aia-device

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
aia_device/: daemon.py  deviceSvc.py  transform.py
aia_device/driver/: driver_svc.py
aia_device/driver/ILI9486/: config.py  driver.py  lcd.py
resources/images/: EmailRead.gv  WH40K  WH40K.gv
tests/: test_driver.py  test_queueConsumer.py  test_queueProducer.py  test_transform.py
